# researchfw

./: .gitignore  AGENT_HANDOVER.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  catalog-info.yaml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
iil_researchfw/: __init__.py
iil_researchfw/_internal/: cache.py  rate_limiter.py
iil_researchfw/analysis/: __init__.py  relevance.py  summary.py
iil_researchfw/citations/: __init__.py  formatter.py
iil_researchfw/core/: __init__.py  exceptions.py  models.py  protocols.py  service.py
iil_researchfw/export/: __init__.py  service.py
iil_researchfw/search/: __init__.py  academic.py  base.py  brave.py  smart.py
tests/: conftest.py  test_academic_search.py  test_brave_search.py  test_cache.py  test_citations.py  test_core_models.py  test_exceptions.py  test_rate_limiter.py  test_relevance.py  test_smart_search.py  test_summary.py
