[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iil-researchfw"
version = "0.5.0"
description = "Platform research framework — search, citations, analysis, export"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["research", "search", "citations", "academic", "async"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.7,<3",
    "tenacity>=8.3,<9",
    "anyio>=4.4,<5",
]

[project.optional-dependencies]
export = [
    "python-docx>=1.1",
    "types-python-docx",
    "markdown>=3.5",
]
scraping = [
    "beautifulsoup4>=4.12",
    "playwright>=1.40",
]
all = [
    "iil-researchfw[export,scraping]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "mypy>=1.10",
    "ruff==0.9.10",
    "coverage[toml]>=7.5",
]

[project.urls]
Homepage = "https://github.com/achimdehnert/researchfw"
Repository = "https://github.com/achimdehnert/researchfw"
Issues = "https://github.com/achimdehnert/researchfw/issues"
Changelog = "https://github.com/achimdehnert/researchfw/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["iil_researchfw"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B904", "SIM108"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN"]

[tool.ruff.lint.isort]
known-first-party = ["iil_researchfw"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["iil_researchfw"]

[tool.coverage.report]
fail_under = 65
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
